--- a/01-counter-app/package.json
+++ b/01-counter-app/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -31,6 +33,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "typescript": "*",
     "vite": "^3.1.0"
   }
