--- a/03-hook-app/package.json
+++ b/03-hook-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -14,9 +15,19 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
