--- a/03-hook-app/package.json
+++ b/03-hook-app/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
     "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
