--- a/03-hook-app/package.json
+++ b/03-hook-app/package.json
@@ -30,6 +30,7 @@
     "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
