--- a/09-rtk-query/package.json
+++ b/09-rtk-query/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db/tasks.json --port 3001"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
