--- a/06-journal-app/package.json
+++ b/06-journal-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --ui"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -23,10 +24,14 @@
     "sweetalert2": "^11.6.16"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "@vitest/ui": "^0.27.1",
+    "jsdom": "^21.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^4.0.4",
+    "vitest": "^0.27.1"
   }
 }
