--- a/06-journal-app/package.json
+++ b/06-journal-app/package.json
@@ -33,6 +33,7 @@
     "jsdom": "^21.0.0",
     "typescript": "^4.6.4",
     "vite": "^4.0.4",
-    "vitest": "^0.27.1"
+    "vitest": "^0.27.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
