--- a/06-journal-app/example.env
+++ b/06-journal-app/example.env
@@ -7,3 +7,5 @@ VITE_FIREBASE_APP_ID=
 
 VITE_CLOUDINARY_CLOUD_NAME=
 VITE_CLOUDINARY_UPLOAD_PRESET=
+VITE_CLOUDINARY_API_KEY=
+VITE_CLOUDINARY_API_SECRET=
