--- a/06-journal-app/package.json
+++ b/06-journal-app/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "@vitest/ui": "^0.27.1",
+    "cloudinary": "^1.33.0",
     "jsdom": "^21.0.0",
     "typescript": "^4.6.4",
     "vite": "^4.0.4",
