--- a/06-journal-app/package.json
+++ b/06-journal-app/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test": "vitest --mode testing",
+    "test:ui": "vitest --ui --mode testing"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
