--- a/12-calendar-app/package.json
+++ b/12-calendar-app/package.json
@@ -13,12 +13,14 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-big-calendar": "^0.38.3",
     "@types/react-dom": "^18.0.9",
+    "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
