--- a/12-calendar-app/package.json
+++ b/12-calendar-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch data/db.json --port 3004"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
@@ -27,6 +28,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "json-server": "^0.17.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
