--- a/12-calendar-app/package.json
+++ b/12-calendar-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "async-mutex": "^0.4.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
@@ -19,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.1"
   },
   "devDependencies": {
